--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,6 @@ on:
 
 env:
   IMAGE_NAME: suisrc/k8skit
-  IMAGE_VERSION: '1.0.0-sidecar'
   GITHUB_REGISTRY: ghcr.io
   DOCKER_REGISTRY: docker.io
 
@@ -24,12 +23,17 @@ jobs:
       # docker build -f "Dockerfile.${IMAGE_VERSION%%-*}" -t image --no-cache --build-arg BASE_IMAGE_TAG=${IMAGE_VERSION#*-} .
       - name: Build image
         run: |
+          TAG_NAME=${GITHUB_REF#refs/tags/}
+          echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
+          echo $TAG_NAME > z/version
+          cat z/version
           docker build -t image --no-cache .
 
       #-${{ github.job }}
       - name: Push github image
         run: |
           REGISTRY_URL=$GITHUB_REGISTRY
+          IMAGE_VERSION=$TAG_NAME
           echo "${{ secrets.GITHUB_TOKEN }}" | docker login $REGISTRY_URL -u ${{ github.actor }} --password-stdin
 
           IMAGE_ID=$REGISTRY_URL/$IMAGE_NAME
@@ -43,6 +47,7 @@ jobs:
       # - name: Push docker image
       #   run: |
       #     REGISTRY_URL=$DOCKER_REGISTRY
+      #     IMAGE_VERSION=${{ env.TAG_NAME }}
       #     echo "${{ secrets.DOCKER_TOKEN }}" | docker login $REGISTRY_URL -u ${{ secrets.DOCKER_USER }} --password-stdin
 
       #     IMAGE_ID=$REGISTRY_URL/$IMAGE_NAME
