--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,12 +20,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      # docker build -f "Dockerfile.${IMAGE_VERSION%%-*}" -t image --no-cache --build-arg BASE_IMAGE_TAG=${IMAGE_VERSION#*-} .
       - name: Build image
         run: |
           TAG_NAME=${GITHUB_REF#refs/tags/}
           echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
-          echo $TAG_NAME > z/version
+          echo ${TAG_NAME%%-*} > z/version
           cat z/version
           docker build -t image --no-cache .
 
