--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,12 +5,11 @@ on:
     # branches: [ main ]
     tags: [ "v*" ]
 
-#  https://github.com/suisrc/k8skit/
-#  https://github.com/suisrc/k8skit/pkgs/container/k8s
+#  https://github.com/suisrc/zgg/
+#  https://github.com/suisrc/zgg/pkgs/container/k8s
 
 env:
-  IMAGE_NAME: suisrc/k8s
-  IMAGE_VERSION: '1.0.0-sidecar'
+  IMAGE_NAME: suisrc/k8skit
   GITHUB_REGISTRY: ghcr.io
   DOCKER_REGISTRY: docker.io
 
@@ -21,15 +20,19 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      # docker build -f "Dockerfile.${IMAGE_VERSION%%-*}" -t image --no-cache --build-arg BASE_IMAGE_TAG=${IMAGE_VERSION#*-} .
       - name: Build image
         run: |
+          TAG_NAME=${GITHUB_REF#refs/tags/}
+          echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
+          echo ${TAG_NAME%%-*} > z/version
+          cat z/version
           docker build -t image --no-cache .
 
       #-${{ github.job }}
       - name: Push github image
         run: |
           REGISTRY_URL=$GITHUB_REGISTRY
+          IMAGE_VERSION=$TAG_NAME
           echo "${{ secrets.GITHUB_TOKEN }}" | docker login $REGISTRY_URL -u ${{ github.actor }} --password-stdin
 
           IMAGE_ID=$REGISTRY_URL/$IMAGE_NAME
@@ -43,6 +46,7 @@ jobs:
       # - name: Push docker image
       #   run: |
       #     REGISTRY_URL=$DOCKER_REGISTRY
+      #     IMAGE_VERSION=$TAG_NAME
       #     echo "${{ secrets.DOCKER_TOKEN }}" | docker login $REGISTRY_URL -u ${{ secrets.DOCKER_USER }} --password-stdin
 
       #     IMAGE_ID=$REGISTRY_URL/$IMAGE_NAME
