--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,16 +43,16 @@ jobs:
           docker tag image $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
 
-      # - name: Push docker image
-      #   run: |
-      #     REGISTRY_URL=$DOCKER_REGISTRY
-      #     IMAGE_VERSION=$TAG_NAME
-      #     echo "${{ secrets.DOCKER_TOKEN }}" | docker login $REGISTRY_URL -u ${{ secrets.DOCKER_USER }} --password-stdin
+      - name: Push docker image
+        run: |
+          REGISTRY_URL=$DOCKER_REGISTRY
+          IMAGE_VERSION=$TAG_NAME
+          echo "${{ secrets.DOCKER_TOKEN }}" | docker login $REGISTRY_URL -u ${{ secrets.DOCKER_USER }} --password-stdin
 
-      #     IMAGE_ID=$REGISTRY_URL/$IMAGE_NAME
-      #     echo IMAGE_ID=$IMAGE_ID
-      #     VERSION=$IMAGE_VERSION
-      #     echo VERSION=$VERSION
+          IMAGE_ID=$REGISTRY_URL/$IMAGE_NAME
+          echo IMAGE_ID=$IMAGE_ID
+          VERSION=$IMAGE_VERSION
+          echo VERSION=$VERSION
 
-      #     docker tag image $IMAGE_ID:$VERSION
-      #     docker push $IMAGE_ID:$VERSION
+          docker tag image $IMAGE_ID:$VERSION
+          docker push $IMAGE_ID:$VERSION
