--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,9 @@ jobs:
         run: |
           TAG_NAME=${GITHUB_REF#refs/tags/}
           echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
+          echo ${TAG_NAME##*-} > vname
           echo ${TAG_NAME%%-*} > version
-          cat version
+          echo "k8skit, appname: `cat vname`, version: `cat version`"
           sed -i "s|k8skit|`cat vname`|g" Dockerfile
           docker build -t image --no-cache .
 
@@ -38,7 +39,7 @@ jobs:
 
           IMAGE_ID=$REGISTRY_URL/$IMAGE_NAME
           echo IMAGE_ID=$IMAGE_ID
-          VERSION=$IMAGE_VERSION  
+          VERSION=$IMAGE_VERSION
           echo VERSION=$VERSION
 
           docker tag image $IMAGE_ID:$VERSION
