--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: ci
 on:
   push:
     # branches: [ main ]
-    tags: [ "v*" ]
+    tags: [ "*-*" ]
 
 #  https://github.com/suisrc/zgg/
 #  https://github.com/suisrc/zgg/pkgs/container/k8s
