--- a/zgg.toml
+++ b/zgg.toml
@@ -30,8 +30,12 @@ syslog="klog.default.svc:5141"
 [kwdog2.routers]
 "/api/iam/"="http://end-iam-kin-svc.uat-fmes.svc"
 
-[fluent]
+[kwlog2]
 token="xxx123456789"
 store="./www"
 route="/api/zgg/logs"
 use_origin=true
+
+[proxy2]
+cacrt="_out/proxy2/ca.crt"
+cakey="_out/proxy2/ca.key"
