--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,11 @@
             "args": [
                 "-local", 
                 "-debug",
+                "-port",
+                "81",
+                "-dual",
+                "-dsn",
+                "cfg:i3SbJ6snkQeZXt@tcp(mysql.base.svc:3306)/cfg?charset=utf8&parseTime=True&loc=Asia%2FShanghai"
             ]
         }
     ]
