--- a/deploy/ksidecar-injector.yaml
+++ b/deploy/ksidecar-injector.yaml
@@ -33,11 +33,11 @@ spec:
       serviceAccountName: ksidecar
       containers:
         - name: ksidecar
-          image: suisrc/k8skit:1.3.15-sidecar
+          image: suisrc/k8skit:1.3.xx-sidecar
           imagePullPolicy: IfNotPresent
           args:
             - --dual
-            - --dsn
+            - --sidecarDatasource
             - 'user:pass@tcp(mysql.base.svc:3306)/cfg?charset=utf8&parseTime=True&loc=Asia%2FShanghai'
           livenessProbe:
             httpGet:
