--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,8 @@
             "args": [
                 "-local", 
                 "-debug",
+                "-port", "81",
+                "-c", "__zgg.toml"
             ]
         }
     ]
